--- a/index.html
+++ b/index.html
@@ -1,7 +1,263 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <title>test</title>
+  <link rel="icon" href="img/bunny.png">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  
+  <style>
+  .navbar{
+    margin-bottom: 0;
+    border-radius: 0;
+    background-color: #5E4485;
+    color: white;
+    padding: 1% 0;
+    font-size: 1.2em;
+    border: 0;
+    width: 100%;
+  }
+
+  .navbar-brand{
+    float: left;
+    min-height: 55px;
+    padding: 0 15px 5px;
+  }
+
+  .navbar-inverse .navbar-nav .active a,.navbar-inverse .navbar-nav .active a:focus, .navbar-inverse .navbar-nav .active a:hover{
+    color: white;
+    background-color: #5E4485;
+  }
+
+  .navbar-inverse .navbar-naf li a{
+    color: #D5D5D5;
+  }
+
+  .carousel img{
+    width: 100%;
+  }
+
+  .carousel-caption{
+    top: 50%;
+    transform: translateY(-50%);
+    text-transform: initial;
+  }
+
+  .btn{
+    font-size: 18px;
+    color: white;
+    padding: 12px 22px;
+    background: #5E4485;
+    border: 2px solid;
+  }
+
+  .btn:hover{
+    color: white;
+    background-color: gray/*dark colour*/;
+    border: 2px solid;
+  }
+
+  .container{
+    margin: 4% auto;
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .fa{
+    padding: 20px;
+    font-size: 42px;
+    color: white;
+  }
+
+  .fa:hover{
+    color: #D5D5D5;
+    text-decoration: none;
+  }
+
+  footer{
+    width: 100%;
+    background-color: #5E4485;
+    color: white;
+    padding: 5%;
+  }
+
+  #hidden{
+    background-color: gray;
+  }
+
+  #icon{
+    max-width: 200px;
+    margin: 1% auto;
+  }
+
+  #logo{
+    max-width: 100%;
+  }
+
+  @media (max-width: 600px){
+    .carousel-caption{
+      display: none;
+    }
+    #icon{
+      max-width: 150px;
+    }
+    #logo{
+      max-width: 100%;
+    }
+    h2{
+      font-size: 1.9em;
+    }
+    .fa{
+      font-size: 20px;
+      padding: 10px;
+    }
+  }
+  </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#MyNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <!--chnage icon later-->
+        </button>
+        <a class="navbar-brand" href="#">
+          <img src="img/w3newbie.png">
+        </a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Testimonials</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="img/mountains.png">
+        <div class="carousel-caption">
+          <h1>Get to know how to fukkin fix those arrows</h1>
+          <br>
+          <button type="button" class="btn btn-default">Make me look better</button>
+        </div>
+      </div>
+      <div class="item">
+        <img src="img/snow.png">
+      </div>
+      <div class="item">
+        <img src="img/red.png">
+      </div>
+    </div>
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"></a>
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"></a>
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </div>
+
+  <div class="container text-center">
+    <h2>What we're using</h2>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="img/html5.png" id="icon">
+        <h4>HTML5</h4>
+      </div>
+      <div class="col-sm-4">
+        <img src="img/bootstrap.png" id="icon">
+        <h4>Bootstrap</h4>
+      </div>
+      <div class="col-sm-4">
+        <img src="img/css3.png" id="icon">
+        <h4>CSS3</h4>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h4>Built with booties</h4>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Loripsalum ipsolumum dolorumit sitameti ametisi</p>
+      </div>
+      <div class="col-md-6">
+        <img src="img/bootstrap2.jpg" class="img-responsive">
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+          <h4>Sass but too big</h4>
+          <p>Lorem ipsum dolor sit amet</p>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+          <img src="img/sass.png" id="logo">
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+          <h4>Less big</h4>
+          <p>Lorem ipsum dolor sit amet</p>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+          <img src="img/less.png" id="logo">
+      </div>
+    </div>
+  </div>
+
+  <div class="container text-center">
+    <div class="row">
+      <h4><a href="#hidden" data-toggle="collapse">Hidden booties</a></h4>
+      <div id="hidden" class="collapse">
+        <h4>Congrats you found the</h4>
+        <p>booties but they're not grey, hidden tag?</p>
+      </div>
+    </div>
+  </div>
+
+  <footer class="container-fluid text-center">
+    <div class="row">
+      <div class="col-sm-4">
+        <h3>Contact</h3>
+        <br>
+        <h4>doo</h4>
+      </div>
+      <div class="col-sm-4">
+        <h3>Soshe but too smol</h3>
+        <br>
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-google"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-youtube"></a>
+      </div>
+      <div class="col-sm-4">
+        <h3>Bun</h3>
+        <br>
+        <img src="img/bunny.png" class="icon">
+      </div>
+    </div>
+  </footer>
+
 </body>
 </html>
