--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>test</title>
-  <link rel="icon" href="img/bunny.png">
+  <title>sk99 Studios</title>
+  <link rel="icon" href="img/sk.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -137,9 +137,9 @@
         <ul class="nav navbar-nav navbar-right">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Testimonials</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#">Unity Projects</a></li>
+          <li><a href="#">Processing</a></li>
+          <li><a href="#">Misc</a></li>
         </ul>
       </div>
     </div>
@@ -168,10 +168,8 @@
       </div>
     </div>
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"></a>
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
     <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"></a>
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </div>
 
@@ -243,12 +241,11 @@
         <h4>doo</h4>
       </div>
       <div class="col-sm-4">
-        <h3>Soshe but too smol</h3>
+        <h3>Socials</h3>
         <br>
         <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-twitter"></a>
         <a href="#" class="fa fa-google"></a>
-        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-github"></a>
         <a href="#" class="fa fa-youtube"></a>
       </div>
       <div class="col-sm-4">
