--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <!--chnage icon later-->
         </button>
         <a class="navbar-brand" href="#">
-          <img src="img/w3newbie.png">
+          <img src="img/skbrand.png">
         </a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
