white text to offwhite

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <div class="item active">
           <img src="img/mountains.png">
           <div class="carousel-caption">
-            <h1>Get to know how to fukkin fix those arrows</h1>
+            <h1>big succ</h1>
             <br>
-            <button type="button" class="btn btn-default">Make me look better</button>
+            <button type="button" class="btn btn-default">button boi</button>
           </div>
         </div>
         <div class="item">
