change to columns

--- a/index.html
+++ b/index.html
@@ -69,66 +69,30 @@
       <span class="sr-only">Next</span>
     </div>
 
-    <div class="container text-center">
-      <h2>What we're using</h2>
-      <div class="row">
-        <div class="col-sm-4">
-          <img src="img/html5.png" id="icon">
-          <h4>HTML5</h4>
-        </div>
-        <div class="col-sm-4">
-          <img src="img/bootstrap.png" id="icon">
-          <h4>Bootstrap</h4>
-        </div>
-        <div class="col-sm-4">
-          <img src="img/css3.png" id="icon">
-          <h4>CSS3</h4>
-        </div>
-      </div>
-    </div>
-
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
-          <h4>Built with booties</h4>
-          <p>Lorem ipsum dolor sit amet</p>
-          <p>Loripsalum ipsolumum dolorumit sitameti ametisi</p>
+        <div class="col-sm-4">
+          <h1>Unity</h1>
         </div>
-        <div class="col-md-6">
-          <img src="img/bootstrap2.jpg" class="img-responsive">
+        <div class="col-sm-4">
+          <h1>Processing</h1>
+        </div>
+        <div class="col-sm-4">
+          <h1>Other</h1>
         </div>
       </div>
-    </div>
-
-    <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <h4>Sass but too big</h4>
-            <p>Lorem ipsum dolor sit amet</p>
+        <div class="col-sm-4">
+          <h1>Unity stuff</h1>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <img src="img/sass.png" id="logo">
+        <div class="col-sm-4">
+          <h1>procesing stuff</h1>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <h4>Less big</h4>
-            <p>Lorem ipsum dolor sit amet</p>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <img src="img/less.png" id="logo">
+        <div class="col-sm-4">
+          <h1>other stuff</h1>
         </div>
       </div>
     </div>
-
-    <div class="container text-center">
-      <div class="row">
-        <h4><a href="#hidden" data-toggle="collapse">Hidden booties</a></h4>
-        <div id="hidden" class="collapse">
-          <h4>Congrats you found the</h4>
-          <p>booties but they're not grey, hidden tag?</p>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <footer class="container-fluid text-center">
     <div class="row">
