--- a/template.html
+++ b/template.html
@@ -24,13 +24,13 @@
           <span class="icon-bar"></span>
           <!--chnage icon later-->
         </button>
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html"></a>
           <img src="img/skbrand.png" id="logo">
         </a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Unity Projects</a></li>
           <li><a href="#">Processing</a></li>
@@ -41,58 +41,11 @@
   </nav>
 
   <div class="main">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img src="img/mountains.png">
-          <div class="carousel-caption">
-            <h1>big succ</h1>
-            <br>
-            <button type="button" class="btn btn-default">button boi</button>
-          </div>
-        </div>
-        <div class="item">
-          <img src="img/snow.png">
-        </div>
-        <div class="item">
-          <img src="img/red.png">
-        </div>
-      </div>
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"></a>
-      <span class="sr-only">Previous</span>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"></a>
-      <span class="sr-only">Next</span>
-    </div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
-          <h1>Unity</h1>
-        </div>
-        <div class="col-sm-4">
-          <h1>Processing</h1>
-        </div>
-        <div class="col-sm-4">
-          <h1>Other</h1>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4">
-          <h1>Unity stuff</h1>
-        </div>
-        <div class="col-sm-4">
-          <h1>procesing stuff</h1>
-        </div>
-        <div class="col-sm-4">
-          <h1>other stuff</h1>
-        </div>
-      </div>
-    </div>
+    <br>
+    <h1>$h1</h1>
+    <br>
+    <h3>$h3</h2>
+  </div>
 
   <footer class="container-fluid text-center">
     <div class="row">
