text-html read/write

--- a/test title.html
+++ b/test title.html
@@ -42,11 +42,11 @@
 
   <div class="main">
     <br>
-    <h1>$title - $date</h1>
+    <h1>test title - 1/1/1</h1>
     <br>
-    <iframe src="$video"></iframe>
+    <iframe src="test url"></iframe>
     <br>
-    <h3>$body</h2>
+    <h3>test body</h2>
   </div>
 
   <footer class="container-fluid text-center">
