--- a/newpost.html
+++ b/newpost.html
@@ -15,84 +15,77 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <!--chnage icon later-->
-        </button>
-        <a class="navbar-brand" href="index.html"></a>
-          <img src="img/skbrand.png" id="logo">
-        </a>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Unity Projects</a></li>
-          <li><a href="#">Processing</a></li>
-          <li><a href="#">Misc</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+	<nav class="navbar navbar-inverse">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<!--chnage icon later-->
+				</button>
+				<a class="navbar-brand" href="index.html"></a>
+					<img src="img/skbrand.png" id="logo">
+				</a>
+			</div>
+			<div class="collapse navbar-collapse" id="myNavbar">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Unity Projects</a></li>
+					<li><a href="#">Processing</a></li>
+					<li><a href="#">Misc</a></li>
+				</ul>	
+			</div>
+		</div>
+	</nav>
 
   <div class="main">
-    <form action="writetext.php" method="POST">
-        Post Title:
-        <input type="text" name="title">
-        <br>
-        Date:
-        <input type="text" name="date">
-        <br>
-        Video:
-        <input type="text" name="video">
-        <br>
-        Text body:
-        <input type="text" name="body">
-        <br>
-        <input type="submit" value="Write to Text">
-    </form>
-
-    <script lang="php" title="writetext.php">
-        $post = fopen("post.txt","w");
-        $title = $_POST['title'];
-        $date = $_POST['date'];
-        $video = $_POST['video'];
-        $body = $_POST['body'];
-        fwrite($post,$title);
-        fwrite($post,$date);
-        fwrite($post,$video);
-        fwrite($post,$body);
-        fclose($post);
-    </script>
+		<br>
+		<table>
+			<tr><td>Text to Save:</td></tr>
+			<tr>
+				<td colspan="3">
+					<textarea id="inputTextToSave" cols="80" rows="25"></textarea>
+				</td>
+			</tr>
+			<tr>
+				<td>Filename to Save As:</td>
+				<td><input id="inputFileNameToSaveAs"></input></td>
+				<td><button onclick="saveTextAsFile()">Save Text to File</button></td>
+			</tr>
+			<tr>
+				<td>Select a File to Load:</td>
+				<td><input type="file" id="fileToLoad"></td>
+				<td><button onclick="loadFileAsText()">Load Selected File</button><td>
+			</tr>
+		</table>
+	
+		<script type="text/javascript" src="writeToFile.js"></script>
   </div>
 
   <footer class="container-fluid text-center">
-    <div class="row">
-      <div class="col-sm-4">
-        <h3>Contact</h3>
-        <br>
-        <h4>doo</h4>
-      </div>
-      <div class="col-sm-4">
-        <h3>Socials</h3>
-        <br>
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-google"></a>
-        <a href="#" class="fa fa-github"></a>
-        <a href="#" class="fa fa-youtube"></a>
-      </div>
-      <div class="col-sm-4">
-        <h3>Bun</h3>
-        <br>
-        <img src="img/bunny.png" class="icon">
-      </div>
-    </div>
-  </footer>
+			<div class="row">
+				<div class="col-sm-4">
+					<h3>Contact</h3>
+					<br>
+					<h4>doo</h4>
+				</div>
+				<div class="col-sm-4">
+					<h3>Socials</h3>
+					<br>
+					<a href="#" class="fa fa-facebook"></a>
+					<a href="#" class="fa fa-google"></a>
+					<a href="#" class="fa fa-github"></a>
+					<a href="#" class="fa fa-youtube"></a>
+				</div>
+				<div class="col-sm-4">
+					<h3>Bun</h3>
+					<br>
+					<img src="img/bunny.png" class="icon">
+				</div>
+			</div>
+		</footer>
 
 </body>
 </html>
