--- a/template.html
+++ b/template.html
@@ -10,35 +10,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="style.css">
-
-  
+  <script type="text/javascript" src="include.js"></script>
 </head>
 <body>
 
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <!--chnage icon later-->
-        </button>
-        <a class="navbar-brand" href="index.html"></a>
-          <img src="img/skbrand.png" id="logo">
-        </a>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Unity Projects</a></li>
-          <li><a href="#">Processing</a></li>
-          <li><a href="#">Misc</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <div include-html="nav.html"></div>
 
   <div class="main">
     <br>
@@ -49,28 +25,7 @@
     <h3>$body</h2>
   </div>
 
-  <footer class="container-fluid text-center">
-    <div class="row">
-      <div class="col-sm-4">
-        <h3>Contact</h3>
-        <br>
-        <h4>doo</h4>
-      </div>
-      <div class="col-sm-4">
-        <h3>Socials</h3>
-        <br>
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-google"></a>
-        <a href="#" class="fa fa-github"></a>
-        <a href="#" class="fa fa-youtube"></a>
-      </div>
-      <div class="col-sm-4">
-        <h3>Bun</h3>
-        <br>
-        <img src="img/bunny.png" class="icon">
-      </div>
-    </div>
-  </footer>
+  <div include-html="footer.html"></div>
 
 </body>
 </html>
