--- a/template.html
+++ b/template.html
@@ -23,6 +23,8 @@
     <iframe src="$video"></iframe>
     <br>
     <h3>$body</h2>
+    <br>
+    <p>$count</p>
   </div>
 
   <div include-html="footer.html"></div>
