test post for styling

--- a/newpost.html
+++ b/newpost.html
@@ -27,7 +27,7 @@
 			</tr>
 			<tr>
 				<td>Filename to Save As:</td>
-				<td><input id="inputFileNameToSaveAs"></input></td>
+				<td><input id="inputFileNameToSaveAs" value="post.txt"></input></td>
 				<td><button onclick="saveTextAsFile()">Save Text to File</button></td>
 			</tr>
 			<tr>
@@ -44,3 +44,25 @@
 	<script>includeHTML();</script>
 </body>
 </html>
+
+<!-- <tr><td>New Post:</td></tr>
+			<tr>
+				<td>
+					<input type="text" id="title" placeholder="Title"></input>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<input type="text" id="date" placeholder="Date"></input>
+				</td>
+			</tr>
+			<tr>
+				<td colspan="3">
+					<input type="text" id="video" placeholder="Video Embed URL"></input>
+				</td>
+			</tr>
+			<tr>
+				<td colspan="3">
+					<input type="text" id="body" placeholder="Text Body"></input>
+				</td>
+			</tr> -->
