--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@
     <div class="col-sm-4">
       <h3>Contact</h3>
       <br>
-      <h4>doo</h4>
+      <h4>Email: email here</h4>
     </div>
     <div class="col-sm-4">
       <h3>Socials</h3>
@@ -16,7 +16,7 @@
     <div class="col-sm-4">
       <h3>Bun</h3>
       <br>
-      <img src="img/bunny.png" class="icon">
+      <img src="/img/bunny.png" class="icon">
     </div>
   </div>
 </footer>
