--- a/nav.html
+++ b/nav.html
@@ -1,19 +1,19 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <!--chnage icon later-->
       </button>
-      <a class="navbar-brand" href="index.html"></a>
-        <img src="img/skbrand.png" id="logo">
+      <a class="navbar-brand" href="/index.html"></a>
+        <img src="/img/skbrand.png" id="logo">
       </a>
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
+    <div class="collapse navbar-collapse" id="navbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="/index.html">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Unity Projects</a></li>
         <li><a href="#">Processing</a></li>
