test column resize

--- a/template.html
+++ b/template.html
@@ -18,16 +18,22 @@
   <div include-html="/nav.html"></div>
 
   <div class="main">
-    <br>
-    <h1>$title - $date</h1>
-    <br>
-    <div class="video">
-      $video
+    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+      <br>
+      <h1>$title - $date</h1>
+      <br>
+      <div class="video">
+        $video
+      </div>
+      <br>
+      <h3>$body</h2>
+      <br>
+      <p class="count">$count</p>
     </div>
-    <br>
-    <h3>$body</h2>
-    <br>
-    <p>$count</p>
+
+    <div class="col-md-4 col-lg-4">
+      
+    </div>
   </div>
 
   <div include-html="/footer.html"></div>
