--- a/template.html
+++ b/template.html
@@ -18,21 +18,24 @@
   <div include-html="/nav.html"></div>
 
   <div class="main">
-    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
-      <br>
-      <h1>$title - $date</h1>
-      <br>
-      <div class="video">
-        $video
+    <div class="container">
+      <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+        <br>
+        <h1>$title - $date</h1>
+        <br>
+        <div class="flex-item video-content embed-responsive embed-responsive-16by9">
+            <iframe class ="embed-responsive-item" src="$video" frameborder="0" encrypted-media ="allowfullscreen"></iframe>
+        </div>
+        <br>
+        <h3>$body</h2>
+        <br>
+        <p class="count">$count</p>
       </div>
-      <br>
-      <h3>$body</h2>
-      <br>
-      <p class="count">$count</p>
-    </div>
 
-    <div class="col-md-4 col-lg-4">
-      
+      <div class="col-md-4 col-lg-4">
+
+
+      </div>
     </div>
   </div>
 
