col test 4, img fix

--- a/nav.html
+++ b/nav.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <!--chnage icon later-->
       </button>
-      <a class="navbar-brand" href="/index.html"></a>
+      <a class="navbar-brand media" href="/index.html"></a>
         <img src="/img/skbrand.png" id="logo">
       </a>
     </div>
