--- a/nav.html
+++ b/nav.html
@@ -11,7 +11,7 @@
         <img src="/img/skbrand.png" id="logo">
       </a>
     </div>
-    <div class="collapse navbar-collapse" id="navbar">
+    <div class="collapse.navbar-collapse" id="navbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/index.html">Home</a></li>
         <li><a href="#">About</a></li>
