--- a/template.html
+++ b/template.html
@@ -29,7 +29,7 @@
         <br>
         <h3>$body</h2>
         <br>
-        <p class="count">$count</p>
+        <p class="count">#$count</p>
       </div>
 
       <div class="col-md-4 col-lg-4">
