nav fix 5, new newpost, header

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
       <div class="row">
         <div class="col-sm-4">
-          <h1>Unity stuff</h1>
+          <iframe class="embed" src="posts/test post.html" width="100%" frameborder="0"></iframe>
         </div>
         <div class="col-sm-4">
           <h1>procesing stuff</h1>
