--- a/template.html
+++ b/template.html
@@ -18,24 +18,26 @@
   <div include-html="/nav.html"></div>
 
   <div class="main">
-    <div class="container">
-      <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+    <div class="container-fluid">
+      <div class="col-xs-12 col-md-8">
         <br>
         <h1>$title - $date</h1>
         <br>
         <div class="flex-item video-content embed-responsive embed-responsive-16by9">
-            <iframe class ="embed-responsive-item" src="$video" frameborder="0" encrypted-media ="allowfullscreen"></iframe>
+          <iframe class ="embed-responsive-item" src="$video" frameborder="0" encrypted-media ="allowfullscreen"></iframe>
         </div>
         <br>
-        <h3>$body</h2>
+        <h2><strong>$header</strong></h2>
+        <br>
+        <h2>$body</h2>
         <br>
         <p class="count">#$count</p>
       </div>
 
-      <div class="col-md-4 col-lg-4">
-
-
+      <div class="col-md-4">
+        <h2></h2>
       </div>
+
     </div>
   </div>
 
