--- a/newpost.html
+++ b/newpost.html
@@ -10,6 +10,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="post.css">
   <script type="text/javascript" src="include.js"></script>
 </head>
 <body>
@@ -28,7 +29,7 @@
 				<br>
 				<h2><strong><input type="text" id="header" placeholder="Header"></input></strong></h2>
 				<br>
-				<h2><input type="text" id="body" placeholder="Text Body"></input></h2>
+				<h2><textarea id="body" cols="60" rows="10" placeholder="Text Body"></textarea></h2>
 			</div>
 
 			<div class="col-md-4">
