--- a/nav.html
+++ b/nav.html
@@ -8,7 +8,7 @@
         <!--chnage icon later-->
       </button>
       <a class="navbar-brand media" href="/index.html"></a>
-        <img src="/img/skbrand.png" id="logo">
+        <img src="/img/skbrand.png" id="logo" style="max-height: 60px;">
       </a>
     </div>
     <div class="collapse.navbar-collapse" id="navbar">
