--- a/index.html
+++ b/index.html
@@ -62,13 +62,19 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-4">
-          <iframe class="embed" src="posts/test post.html" width="100%" frameborder="0"></iframe>
+        <div class="col-sm-4" id="unity">
+          <article>
+            <a>
+              <h2>Title</h2>
+              <hr>
+              <embed src="img/bun.png">
+            </a>
+          </article>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4" id="processing">
           <h1>procesing stuff</h1>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4" id="misc">
           <h1>other stuff</h1>
         </div>
       </div>
