article test, prestyled

--- a/newpost.html
+++ b/newpost.html
@@ -10,13 +10,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet/less" type="text/css" href="style.less" />
-  <link rel="stylesheet/less" type="text/css" href="post.less" />
+  <link rel="stylesheet/less" type="text/css" href="style.less">
+  <link rel="stylesheet/less" type="text/css" href="post.less">
   <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.5.0-beta.2/less.min.js" ></script>
   <script type="text/javascript" src="include.js"></script>
 </head>
-<body>
 
+<body>
 	<div include-html="nav.html"></div>
 
   <div class="main">
@@ -50,7 +50,8 @@
   </div>
 
 	<div include-html="footer.html"></div>
-	<script>includeHTML();</script>
 </body>
-</html>
 
+<script>includeHTML();</script>
+
+</html>
