--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet/less" type="text/css" href="style.less" />
+  <link rel="stylesheet/less" type="text/css" href="style.less">
+  <link rel="stylesheet/less" type="text/css" href="post.less">
   <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.5.0-beta.2/less.min.js" ></script>
   <script type="text/javascript" src="include.js"></script>
+  <link rel="stylesheet" href="test.css">
 </head>
-<body>
 
+<body>
   <div include-html="nav.html"></div>
 
   <div class="main">
@@ -49,7 +51,7 @@
       <span class="sr-only">Next</span>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-sm-4">
           <h1>Unity</h1>
@@ -64,8 +66,8 @@
       <div class="row">
         <div class="col-sm-4" id="unity">
           <article>
-            <a>
-              <h2>Title</h2>
+            <a href="posts/test post.html">
+              <h2>Title - Date</h2>
               <hr>
               <embed src="img/bun.png">
             </a>
@@ -81,6 +83,8 @@
     </div>
 
   <div include-html="footer.html"></div>
-  <script>includeHTML();</script>
 </body>
+
+<script>includeHTML();</script>
+
 </html>
