added dates on article hover test

--- a/test.html
+++ b/test.html
@@ -31,7 +31,7 @@
 							<img src="img/red.png">
 							<section>
 								<div class="vignette">
-									<h3>Title</h3>
+									<span>Title - </span> <span class="date">Date</span>
 									<hr>
 									<h4>caption</h4>
 								</div>
