--- a/test.html
+++ b/test.html
@@ -8,20 +8,48 @@
 		
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="test.css">		
+		<link rel="stylesheet" href="test.css">
+		<script type="text/javascript" src="newArticle.js"></script>
 	</head>
 
 	<body>
+		<nav class="navbar navbar-inverse">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<!--chnage icon later-->
+					</button>
+					<a class="navbar-brand media" href="index.html"></a>
+						<img src="img/skbrand.png" id="logo" style="max-height: 60px;">
+					</a>
+				</div>
+				<div class="collapse.navbar-collapse" id="navbar">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="/index.html">Home</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Unity Projects</a></li>
+						<li><a href="#">Processing</a></li>
+						<li><a href="#">Misc</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-sm-4">
+				<div class="col-xs-0 col-sm-4">
 					<h1>Unity</h1>
 				</div>
-				<div class="col-sm-4">
+				<div class="col-xs-0 col-sm-4">
 					<h1>Processing</h1>
 				</div>
-				<div class="col-sm-4">
+				<div class="col-xs-0 col-sm-4">
 					<h1>Other</h1>
+				</div>
+				<div class="col-xs-12 col-sm-0">
 				</div>
 			</div>
 			<div class="row">
@@ -38,14 +66,51 @@
 							</section>
 						</a>
 					</article>
+					<article>
+						<a href="posts/test post.html">
+							<img src="img/red.png">
+							<section>
+								<div class="vignette">
+									<span>Title - </span> <span class="date">Date</span>
+									<hr>
+									<h4>caption</h4>
+								</div>
+							</section>
+						</a>
+					</article>
 				</div>
 				<div class="col-sm-4" id="processing">
-					<h1>procesing stuff</h1>
+					<article>
+						<a href="posts/test post.html">
+							<img src="img/red.png">
+							<section>
+								<div class="vignette">
+									<span>Title - </span> <span class="date">Date</span>
+									<hr>
+									<h4>caption</h4>
+								</div>
+							</section>
+						</a>
+					</article>
 				</div>
 				<div class="col-sm-4" id="misc">
-					<h1>other stuff</h1>
+					<article>
+						<a href="posts/test post.html">
+							<img src="img/red.png">
+							<section>
+								<div class="vignette">
+									<span>Title - </span> <span class="date">Date</span>
+									<hr>
+									<h4>caption</h4>
+								</div>
+							</section>
+						</a>
+					</article>
 				</div>
 			</div>
 		</div>
 	</body>
+
+	<script>appendPost("misc");</script>
+
 </html>
