--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <link rel="icon" href="img/sk.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+  <base href="inferrinizzard.github.io">  
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet/less" type="text/css" href="style.less">
-  <link rel="stylesheet/less" type="text/css" href="post.less">
   <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.5.0-beta.2/less.min.js" ></script>
   <script type="text/javascript" src="include.js"></script>
   <link rel="stylesheet" href="test.css">
