--- a/index.html
+++ b/index.html
@@ -52,33 +52,8 @@
     </div>
 
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-4">
-          <h1>Unity</h1>
-        </div>
-        <div class="col-sm-4">
-          <h1>Processing</h1>
-        </div>
-        <div class="col-sm-4">
-          <h1>Other</h1>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4" id="unity">
-          <article>
-            <a href="posts/test post.html">
-              <h2>Title - Date</h2>
-              <hr>
-              <embed src="img/bun.png">
-            </a>
-          </article>
-        </div>
-        <div class="col-sm-4" id="processing">
-          <h1>procesing stuff</h1>
-        </div>
-        <div class="col-sm-4" id="misc">
-          <h1>other stuff</h1>
-        </div>
+      <div class="grid">
+        
       </div>
     </div>
 
