masonry added, removed import type

--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet/less" type="text/css" href="style.less">
   <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.5.0-beta.2/less.min.js" ></script>
-  <script type="text/javascript" src="include.js"></script>
-  <link rel="stylesheet" href="test.css">
+  
+  <link rel="stylesheet/less" href="style.less">
+
+  <script src="include.js"></script>
+  <script src="masonry.js" async></script>
+  <script src="imagesLoaded.js" async></script>
+  <script src="article.js" async></script>
 </head>
 
 <body>
@@ -53,7 +58,7 @@
 
     <div class="container-fluid">
       <div class="grid">
-        
+
       </div>
     </div>
 
