--- a/test.html
+++ b/test.html
@@ -9,11 +9,11 @@
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="test.css">
-		<script type="text/javascript" src="masonry.js"></script>
-		<script type="text/javascript" src="imagesLoaded.js"></script>
-		<script type="text/javascript" src="article.js"></script>
+
+		<script src="masonry.js" async></script>
+		<script src="imagesLoaded.js" async></script>
+		<script src="article.js" async></script>
 	</head>
 
 	<body>
@@ -23,8 +23,6 @@
 		<div class="container-fluid">
 			<div class="grid" id="anchor">
 				<div class="grid-sizer"></div>
-				<article class="grid-item"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div id="vignette"><span>snow - </span><span class="date">10/10</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
-				<article class="grid-item"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div id="vignette"><span>snow - </span><span class="date">10/10</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
 				<article class="grid-item"><a href="posts/unity/snow.html"><img src="img/skbrand.png"><section><div id="vignette"><span>snow - </span><span class="date">10/10</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
 				<article class="grid-item"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div id="vignette"><span>snow - </span><span class="date">10/10</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
 				<article class="grid-item"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div id="vignette"><span>snow - </span><span class="date">10/10</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
@@ -32,5 +30,7 @@
 			</div>
 		</div>
 	</body>
+
+	
 
 </html>
