infinite scroll, isotope added

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.5.0-beta.2/less.min.js" ></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.5.0-beta.2/less.min.js" ></script>
   
-  <link rel="stylesheet/less" href="style.less">
+  <link rel="stylesheet/less" type="text/css" href="style.less">
 
   <script src="include.js"></script>
-  <script src="masonry.js" async></script>
-  <script src="imagesLoaded.js" async></script>
+  <script src="isotope.js" async></script>
+  <script src="infScroll.js" async></script>
   <script src="article.js" async></script>
 </head>
 
