--- a/test.html
+++ b/test.html
@@ -11,8 +11,8 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="test.css">
 
-		<script src="masonry.js" async></script>
-		<script src="imagesLoaded.js" async></script>
+		<script src="isotope.js" async></script>
+		<script src="infScroll.js" async></script>
 		<script src="article.js" async></script>
 	</head>
 
@@ -21,12 +21,13 @@
 		<button onclick="appendPost('snow','10/10','unity');">Button</button>
 
 		<div class="container-fluid">
+
 			<div class="grid" id="anchor">
 				<div class="grid-sizer"></div>
-				<article class="grid-item"><a href="posts/unity/snow.html"><img src="img/skbrand.png"><section><div id="vignette"><span>snow - </span><span class="date">10/10</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
-				<article class="grid-item"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div id="vignette"><span>snow - </span><span class="date">10/10</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
-				<article class="grid-item"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div id="vignette"><span>snow - </span><span class="date">10/10</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
-				<article class="grid-item"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div id="vignette"><span>snow - </span><span class="date">10/10</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
+				<article class="grid-item unity misc"><a href="posts/unity/snow.html"><img src="img/skbrand.png"><section><div id="vignette"><span>snow - </span><span class="date">10/10</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
+				<article class="grid-item processing"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div id="vignette"><span>snow - </span><span class="date">10/10</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
+				<article class="grid-item misc"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div id="vignette"><span>snow - </span><span class="date">10/10</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
+				<article class="grid-item unity"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div id="vignette"><span>snow - </span><span class="date">10/10</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
 			</div>
 		</div>
 	</body>
