nav footer include test

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <div include-html="nav.html"></div>
+  <nav class="navbar navbar-inverse" include-html="nav.html"></nav>
 
   <div class="main">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -62,7 +62,7 @@
       </div>
     </div>
 
-  <div include-html="footer.html"></div>
+  <footer class="container-fluid text-center" include-html="footer.html"></footer>
 </body>
 
 <script>includeHTML();</script>
