moved article spawn to writeToFile.js, updated write.java

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <script src="include.js"></script>
   <script src="isotope.js" async></script>
-  <script src="infScroll.js" async></script>
+  <script src="imagesLoaded.js" async></script>
   <script src="article.js" async></script>
 </head>
 
@@ -57,7 +57,7 @@
     </div>
 
     <div class="container-fluid">
-      <div class="grid">
+      <div class="grid" id="anchor">
 
       </div>
     </div>
