--- a/newpost.html
+++ b/newpost.html
@@ -28,7 +28,7 @@
 				<br>
 				<input type="text" id="video" placeholder="Video Embed URL"></input>
 				<br>
-				<h2><strong><input type="text" id="header" placeholder="Header"></input></strong></h2>
+				<h2><<input type="text" id="category" placeholder="Category"></input></h2>
 				<br>
 				<h2><textarea id="body" cols="60" rows="10" placeholder="Text Body"></textarea></h2>
 			</div>
