--- a/test.html
+++ b/test.html
@@ -12,13 +12,11 @@
 		<link rel="stylesheet" href="test.css">
 
 		<script src="isotope.js" async></script>
-		<script src="infScroll.js" async></script>
+		<script src="imagesLoaded.js" async></script>
 		<script src="article.js" async></script>
 	</head>
 
 	<body>
-
-		<button onclick="appendPost('snow','10/10','unity');">Button</button>
 
 		<div class="container-fluid">
 
