write system fixed

--- a/test.html
+++ b/test.html
@@ -22,6 +22,7 @@
 
 			<div class="grid" id="anchor">
 				<div class="grid-sizer"></div>
+				<article class="unity"><a href="posts/snow.html"><img src="img/snow.png"><section><div id="vignette"><span>snow - </span><span class="date">7/7/2018</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
 				<article class="grid-item unity misc"><a href="posts/unity/snow.html"><img src="img/skbrand.png"><section><div id="vignette"><span>snow - </span><span class="date">10/10</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
 				<article class="grid-item processing"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div id="vignette"><span>snow - </span><span class="date">10/10</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
 				<article class="grid-item misc"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div id="vignette"><span>snow - </span><span class="date">10/10</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
