--- a/nav.html
+++ b/nav.html
@@ -1,20 +1,23 @@
-<nav class="navbar fixed-top navbar-inverse">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <!--chnage icon later-->
+      </button>
       <a class="navbar-brand media" href="/index.html"></a>
         <img src="/img/skbrand.png" id="logo" style="max-height: 60px;">
       </a>
-      <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
     </div>
     <div class="collapse.navbar-collapse" id="navbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/index.html">Home</a>     </li>
-        <li><a href="/works.html">Works</a>    </li>
-        <li><a href="/about.html">About</a>    </li>
-        <li><a href="/contact.html">Contact</a></li>
-        <li><a href="/misc.html">Misc</a>      </li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="#">Works</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Misc</a></li>
       </ul>
     </div>
   </div>
