--- a/nav.html
+++ b/nav.html
@@ -1,10 +1,8 @@
-<nav class="navbar navbar-inverse">
+<nav class="navbar fixed-top navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+      <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar">
+        <span class="navbar-toggler-icon"></span>
         <!--chnage icon later-->
       </button>
       <a class="navbar-brand media" href="/index.html"></a>
