--- a/nav.html
+++ b/nav.html
@@ -1,19 +1,19 @@
 <div class="pos-f-t">
-  <div class="collapse" id="navbar">
-    <ul class="nav navbar-nav navbar-right">
+  <nav class="navbar navbar-dark">
+    <a class="navbar-brand media" href="/index.html"></a>
+      <img src="/img/skbrand.png" id="logo" style="max-height: 60px;">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="fas fa-bars"></span>
+    </button>
+    <div class="collapse" id="navbar">
+      <ul class="nav navbar-nav navbar-right">
         <li><a href="/index.html">Home</a></li>
         <li><a href="#">Works</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="#">Misc</a></li>
       </ul>
-  </div>
-  <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand media" href="/index.html"></a>
-      <img src="/img/skbrand.png" id="logo" style="max-height: 60px;">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon fas fa-bars"></span>
-    </button>
+   </div>
   </nav>
 </div>
