--- a/footer.html
+++ b/footer.html
@@ -8,10 +8,10 @@
     <div class="col-sm-4">
       <h3>Socials</h3>
       <br>
-      <a href="#" class="fa fa-facebook"></a>
-      <a href="#" class="fa fa-google"></a>
-      <a href="#" class="fa fa-github"></a>
-      <a href="#" class="fa fa-youtube"></a>
+      <a href="#" class="fas fa-facebook"></a>
+      <a href="#" class="fas fa-google"></a>
+      <a href="#" class="fas fa-github"></a>
+      <a href="#" class="fas fa-youtube"></a>
     </div>
     <div class="col-sm-4">
       <h3>Bun</h3>
