--- a/nav.html
+++ b/nav.html
@@ -1,6 +1,6 @@
 <div class="pos-f-t">
   <nav class="navbar navbar-dark">
-    <a class="navbar-brand media" href="/index.html"></a>
+    <a class="navbar-brand media" href="/index.html">
       <img src="/img/skbrand.png" id="logo" style="max-height: 60px;">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
