--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <div include-html="nav.html"></div>
+  <div include-html="nav.html" class="pos-f-t"></div>
 
   <div class="main">
     <div id="highlights" class="carousel slide" data-ride="carousel">
